--- a/index.html
+++ b/index.html
@@ -1,9 +1,128 @@
-<!doctype html>
-<html>
-  <head>
-    <title>jazzstudentgigs</title>
-  </head>
-  <body>
-    <p>Ahoy!</p>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Hire a High School Jazz Combo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #fdfdfd;
+      color: #222;
+      line-height: 1.6;
+    }
+
+    header {
+      position: relative;
+    }
+
+    /* Hamburger menu */
+    .menu-btn {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      font-size: 28px;
+      cursor: pointer;
+      color: white;
+      z-index: 2000;
+    }
+
+    /* Sidebar */
+    .sidebar {
+      height: 100%;
+      width: 0;
+      position: fixed;
+      z-index: 1500;
+      top: 0;
+      left: 0;
+      background-color: #111;
+      overflow-x: hidden;
+      transition: 0.3s;
+      padding-top: 60px;
+    }
+
+    .sidebar a {
+      padding: 12px 24px;
+      text-decoration: none;
+      font-size: 18px;
+      color: #f1f1f1;
+      display: block;
+    }
+
+    .sidebar a:hover {
+      background: #333;
+    }
+
+    .hero {
+      width: 100%;
+      max-height: 420px;
+      object-fit: cover;
+    }
+
+    .container {
+      max-width: 750px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+
+    .contact-box {
+      border: 1px solid #ddd;
+      padding: 20px;
+      border-radius: 8px;
+      background-color: #fafafa;
+      margin: 30px 0;
+    }
+  </style>
+
+  <script>
+    function openMenu() {
+      document.getElementById("sidebar").style.width = "250px";
+    }
+    function closeMenu() {
+      document.getElementById("sidebar").style.width = "0";
+    }
+  </script>
+</head>
+
+<body>
+
+<header>
+  <span class="menu-btn" onclick="openMenu()">☰</span>
+
+  <div id="sidebar" class="sidebar">
+    <a href="javascript:void(0)" onclick="closeMenu()">✕ Close</a>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="#">Photos (coming soon)</a>
+    <a href="#">Previous Gigs (coming soon)</a>
+  </div>
+
+  <img class="hero" src="images/jazz1.jpg" alt="Student musicians performing">
+</header>
+
+<div class="container">
+  <h1>Jazz Student Gigs</h1>
+  <p>
+    Jazz Student Gigs is an independent, volunteer run contact point where community
+    members can share performance opportunities with student jazz musicians.
+  </p>
+
+  <p>
+    We do <strong>not</strong> book gigs, employ musicians, or manage performance arrangements.
+    Messages sent to the coordinator are forwarded to interested families, who handle
+    all decisions, communication, scheduling, and payments independently.
+  </p>
+
+  <h2>Interested in reaching student musicians?</h2>
+  <p>Contact the independent coordinator:</p>
+
+  <div class="contact-box">
+    <p><strong>Email:</strong> jazzstudentgigs@gmail.com</p>
+    <p><strong>Instagram:</strong> <a href="https://instagram.com/jazzstudentgigs">@jazzstudentgigs</a></p>
+  </div>
+</div>
+
+</body>
 </html>
