--- a/about.html
+++ b/about.html
@@ -1,40 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About – Jazz Student Gigs</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
     body {
+      margin: 0;
       font-family: Arial, sans-serif;
+      background: #0D1B2A;
+      color: #E0E1DD;
+      line-height: 1.7;
+      padding: 20px;
       max-width: 750px;
       margin: 0 auto;
-      padding: 20px;
-      line-height: 1.6;
-      color: #222;
     }
-    a { color: #0066cc; }
+    h1 {
+      color: #FFFFFF;
+    }
+    a {
+      color: #6EC1E4;
+    }
+    .logo {
+      width: 240px;
+      display: block;
+      margin: 20px auto;
+    }
   </style>
 </head>
 
 <body>
 
+<img src="images/logo.svg" alt="Jazz Student Gigs Logo" class="logo" />
+
 <h1>About Jazz Student Gigs</h1>
 
 <p>
-  Jazz Student Gigs is an informal, community-run contact point designed to help
+  Jazz Student Gigs is an informal, community run contact point designed to help
   connect families of student jazz musicians with potential performance opportunities.
 </p>
 
 <p>
-  This site does not represent any school, booster club, or nonprofit. It does not
-  book gigs, negotiate terms, or participate in payment arrangements.
+  This site does not represent any school, booster club, or nonprofit.
+  It does not book gigs, negotiate terms, or participate in payment arrangements.
   Students and families decide independently whether to participate in any opportunity
   they are notified about.
 </p>
 
-<p><a href="index.html">← Back to home</a></p>
+<p><a href="index.html">Back to home</a></p>
 
 </body>
 </html>
