--- a/index.html
+++ b/index.html
@@ -148,8 +148,11 @@
   <h2>Interested in reaching student musicians?</h2>
   <p>Contact the independent coordinator:</p>
 
+<!-- Contact info needs to be updated -->
   <div class="contact-box">
-    <p><strong>Email:</strong> jazzstudentgigs@gmail.com</p>
+    <p><strong>Email:</strong>
+      <a href="mailto:jazzstudentgigs@gmail.com">jazzstudentgigs@gmail.com</a>
+    </p>
     <p><strong>Instagram:</strong>
       <a href="https://instagram.com/jazzstudentgigs">@jazzstudentgigs</a>
     </p>
