Remove IG, example hamburger entries

--- a/index.html
+++ b/index.html
@@ -121,8 +121,10 @@
 <div id="sidebar" class="sidebar" onclick="event.stopPropagation()">
   <a href="index.html">Home</a>
   <a href="about.html">About</a>
-  <a href="#">Photos (coming soon)</a>
-  <a href="#">Previous Gigs (coming soon)</a>
+<!-- Add additional items like this
+  <a href="path_to_photo_gallery/index.html">Photos</a>
+  <a href="previous_gigs.html">Previous Gigs</a>
+-->
 </div>
 
 <img src="images/logo.svg" alt="Jazz Student Gigs Logo" class="logo" />
@@ -153,9 +155,11 @@
     <p><strong>Email:</strong>
       <a href="mailto:jazzstudentgigs@gmail.com">jazzstudentgigs@gmail.com</a>
     </p>
+<!--
     <p><strong>Instagram:</strong>
       <a href="https://instagram.com/jazzstudentgigs">@jazzstudentgigs</a>
     </p>
+-->
   </div>
 </div>
 
