Added comments for Marco

--- a/index.html
+++ b/index.html
@@ -57,9 +57,6 @@
       transition: width 0.3s ease;
       padding-top: 80px;
       border-right: 2px solid var(--cool-blue);
-
-
-
     }
 
     .sidebar a {
@@ -136,6 +133,12 @@
 <!-- Main Content -->
 <div class="container">
   <h1>Jazz Student Gigs</h1>
+<!-- Someone who can actually write should reword this but it's important to emphasize that:
+  1. This is not run or coordinated by BHS Jazz in any way, they just link to this page as a
+     service.
+  2. BHS Jazz doesn't handle any payment details or pricing, that's all negotiated between
+     the customers and the musicians.
+-->
   <p>
     Jazz Student Gigs is an independent, volunteer-run contact point where community
     members can share performance opportunities with student jazz musicians.
@@ -156,8 +159,13 @@
       <a href="mailto:jazzstudentgigs@gmail.com">jazzstudentgigs@gmail.com</a>
     </p>
 <!--
+    Leslie didn't want Insta for DMs or a phone number listed here
+
     <p><strong>Instagram:</strong>
       <a href="https://instagram.com/jazzstudentgigs">@jazzstudentgigs</a>
+    </p>
+    <p><strong>Phone:</strong>
+      <a href="tel:+15105551212">1-510-555-1212</a>
     </p>
 -->
   </div>
