Fixed comment syntax, I hate html

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 
 <body>
 
-<-- We need a better logo -->
+<!-- We need a better logo -->
 <img src="images/logo.svg" alt="Jazz Student Gigs Logo" class="logo" />
 
 <h1>About Jazz Student Gigs</h1>
@@ -42,7 +42,7 @@
   connect families of student jazz musicians with potential performance opportunities.
 </p>
 
-<-- This is an important disclaimer -->
+<!-- This is an important disclaimer -->
 <p>
   This site does not represent any school, booster club, or nonprofit.
   It does not book gigs, negotiate terms, or participate in payment arrangements.
